2001-07-23  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in, cmds.c, ftp.c, ftp_var.h, getpass.c, glob.c,
	main.c, ruserpass.c, secure.c, secure.h: Quick and dirty Win32
	port.  Changes include using sockets more portably; changing the
	method of getting username, home directory, and temporary
	filenames; adding password reading code for Win32; directory
	enumeration via FindNextFile() rather than readdir(); removing OUT
	labels (which appear to cause problems with MSVC++ 6.0).  Since
	ANSI C, assume we have stdarg.h.

2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* secure.c: Instead of hard wiring the FUDGE_FACTOR, new variables
	to keep track of the total buffer length desired and the actual
	maximum that can be fitted. Add secure_determine_constants() to
	determine the mechanism dependent overhead. This has a hard limit
	for krb4 - for gssapi use gss_wrap_size_limit.

2001-06-15  Ezra Peisach  <epeisach@mit.edu>

	* cmds.c, domacro.c: Cast arguments to isspace() and isdigit()
	from char to int.

	* ftp.c: krb5_mk_priv(), krb5_mk_safe() expect C_Block *.

2001-05-01  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (setpeer): Port number should be unsigned short.  (Patch
	from Garry Zacheiss.)  Add upper-bound check in case short is not
	exactly 16 bits.  Don't truncate the port number before checking.

2001-04-27  Ezra Peisach  <epeisach@mit.edu>

	* ftp_var.h: Prototype for recvrequest() needs volatile
 	declaration to match code. Native Dec Alpha compiler errors on the
 	inconsistancy.

	* secure.h (PROTOTYPE): Only define if not defined already.

2001-04-26  Ken Raeburn  <raeburn@mit.edu>

	* ftp_var.h (PROTOTYPE): Always define to use supplied prototype.
	* secure.h (PROTOTYPE): Likewise.

2001-03-07  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (strerror): Only define if not HAVE_STRERROR.
	* ftp.c (strerror): Likewise.
	* secure.c (secure_putbuf, secure_getbyte): Use strerror.

2000-11-21  Ken Raeburn  <raeburn@mit.edu>
